Site Derniere Version

--- a/elonfan.html
+++ b/elonfan.html
@@ -1,121 +1,130 @@
 <!DOCTYPE html>
-<html lang ='fr'>
-    <head>
-        <meta name = "viewport" content ="width=device-width,initial-scale=1.0"> 
-        <meta name = "keywords" content = "le plus riche au monde, tesla, space-x, starlink, Mars">
-        <meta name = "Description" content = " Voici le site des Fan d'Elon musk Français">
-        <title> Elon Musk Fan Page</title>
-        <link rel="stylesheet" href ="elonmsukfanpage.css">
-        <link rel ="icon" href="image/elon.icon.png" alt ="icon de la page">
-    </head>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="le plus riche au monde, tesla, space-x, starlink, Mars">
+    <meta name="description" content="Voici le site des Fan d'Elon Musk Français">
+    <title>Elon Musk Fan Page</title>
+    <link rel="stylesheet" href="elonmsukfanpage.css">
+    <link rel="icon" href="image/elon.icon.png" type="image/png" alt="Icon de la page">
+</head>
+<body>
+    <!-- Barre de navigation -->
+    <header class="barreheader">
+        <ul id="menu" class="menu">
+            <li><a href="#biographie" class="boutonheader">Biographie</a></li>
+            <li><a href="#evenement" class="boutonheader">Événements</a></li>
+            <li><a href="#realisation" class="boutonheader">Réalisations</a></li>
+            <li><a href="#actualité" class="boutonheader">Actualité</a></li>
+        </ul>
+    </header>
 
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <a href="#Accueil"><button>Accueil</button></a>
-                    <a href="#biographie"><button>Biographie</button></a>
-                    <a href="#evenement"><button>Evenement</button></a>
-                    <a href="#realisation"><button>Realisation</button></a>
-                    <a href="actualité">Actualite</a>
-                </ul>
-            </nav>
-        </header>
+    <main>
+        <!-- Section d'accueil -->
+        <section class="fd_ec_acc">
+            <h1>Bienvenue</h1>
+        </section>
 
-        <main>
-            <div class ="fd_ec_acc">
-            <h1 id="Accueil">Bienvenue</h1>
+        <!-- Biographie -->
+        <section class="fd_ec_bio">
+            <h2 id="biographie">Biographie</h2>
+            <div class="cadrescroll">
+                <div class="texte">
+                    <p class="texte1">
+                        Elon Musk, né le 28 juin 1971 à Pretoria, en Afrique du Sud, est un entrepreneur et inventeur de renom,
+                        connu pour ses contributions révolutionnaires dans les domaines de la technologie, de l’énergie et de l’espace.
+                    </p>
+                    <p class="texte1">
+                        En 1995, Musk fonde Zip2, une entreprise fournissant des logiciels de cartographie en ligne pour les journaux.
+                        La société est vendue en 1999 à Compaq pour près de 300 millions de dollars, donnant à Musk les moyens de réaliser ses projets plus ambitieux.
+                    </p>
+                    <p class="texte1">
+                        En 2002, Musk fonde SpaceX dans le but de réduire les coûts des voyages spatiaux et de rendre les missions spatiales accessibles à un plus large public.
+                    </p>
+                    <p class="texte1">
+                        Il commence sa carrière dans les affaires comme cofondateur de la société de logiciels Zip2 avec son frère, 
+                        Kimbal Musk (en). La start-up est acquise par Compaq pour 307 millions de dollars en 1999. La même année, 
+                        Musk cofonde la banque en ligne X.com, qui fusionne avec Confinity en 2000 pour former PayPal. 
+                        eBay rachète PayPal en 2002 pour 1,5 milliard de dollars.
+                    </p>
+                    <p class="texte1">
+                        En 2018, Elon Musk est l'objet d'une enquête de la Securities and Exchange Commission (SEC)
+                        en raison d'annonces faites sur Twitter susceptibles d'influencer le cours de bourse de Tesla.
+                        En 2023, il fonde la société xAI dans le domaine de l'intelligence artificielle.
+                    </p>
+                </div>
             </div>
+        </section>
 
-            <h2 id="biographie"></h2>
+        <!-- Événements -->
+        <section id="evenement">
+            <h2>Événements</h2>
+            <div class="alignerpancarte2">
+                <div class="pancarte">
+                    <img src="image/image.png" alt="Image d'Elon avec un fond Starlink">
+                    <p>SpaceX continue de déployer sa constellation de satellites Starlink pour fournir une connexion internet haut débit dans le monde entier.</p>
+                </div>
+                <div class="pancarte">
+                    <img src="image/Spacex_enhanced.jpg" alt="Fond d'écran de SpaceX">
+                    <p>SpaceX poursuit ses missions ambitieuses, y compris les lancements de satellites via les fusées Falcon 9 et Falcon Heavy.</p>
+                </div>
+                <div class="pancarte">
+                    <img src="image/tesla.jpg" alt="Logo de Tesla">
+                    <p>Tesla pourrait organiser un événement en 2024, comme son Tesla AI Day, où Elon Musk présenterait de nouvelles avancées en matière d'intelligence artificielle.</p>
+                </div>
+                <div class="pancarte">
+                    <img src="image/The-Boring-Company-Branding-logotype-we-need-cafeine-02_enhanced.jpg" alt="Logo de The Boring Company">
+                    <p>The Boring Company Tunnel Openings: Ces événements marquent l'achèvement de projets de tunnel comme le Las Vegas Loop.</p>
+                </div>
+            </div>
+        </section>
 
-                <article class ="alignepancarte">
+        <!-- Réalisations -->
+        <section id="realisation">
+            <h2>Réalisations</h2>
+            <article class="realisation">
+                <details>
+                    <p>SpaceX, l’entreprise aérospatiale fondée par Musk en 2002, a réalisé des avancées majeures dans la réutilisation des fusées.</p>
+                    <p>Dans la continuité de sa vision ambitieuse, Musk a fondé SpaceX pour rendre les voyages spatiaux accessibles. SpaceX a pionnier la réutilisation des fusées.</p>
+                    <p>SpaceX a envoyé des astronautes de la NASA vers la Station Spatiale Internationale (ISS) avec le Crew Dragon.</p>
+                </details>
+            </article>
+        </section>
 
-                    <section class="img">
-                        <img src="image/profil.webp">
-                    </section>
-                    
-                    <div class ="cadrescroll">
-                        <section class="texte">
+        <!-- Actualités -->
+        <section id="actualité">
+            <h2>Actualités</h2>
+            <div class="cadrevideo">
+                <iframe width="300" height="315" src="https://www.youtube.com/embed/dk9_m48rQVg?si=3A63gmC2f_F5USp4" 
+                title="Video du journal LeMonde" frameborder="0" allowfullscreen></iframe>
 
-                            <p class="texte1">Elon Musk, né le 28 juin 1971 à Pretoria, 
-                                en Afrique du Sud, est un entrepreneur et inventeur de renom,
-                                connu pour ses contributions révolutionnaires dans les domaines de la technologie,
-                                de l’énergie et de l’espace. Dès son jeune âge,
-                                il montre une passion pour les sciences et la programmation. 
-                                À 17 ans, il quitte l'Afrique du Sud pour poursuivre ses études en Amérique du Nord, 
-                                où il obtient des diplômes en physique et en économie à l’Université de Pennsylvanie. 
-                                Après un passage à Stanford, il abandonne ses études pour se lancer dans l'entrepreneuriat,
-                                convaincu que l'avenir se trouve dans l'innovation technologique.
-                            </p>
+                <iframe width="300" height="315" src="https://www.youtube.com/embed/pBvFJStJYJU?si=_bEiQdom1b-yFW4p" 
+                title="Comment Elon Musk est devenu un personnage central de l'élection américaine" frameborder="0" 
+                allowfullscreen></iframe>
 
-                            <p class="texte2">En 1995, Musk fonde Zip2, une entreprise fournissant des logiciels de cartographie en ligne pour les journaux. 
-                                La société est vendue en 1999 à Compaq pour près de 300 millions de dollars, donnant à Musk les moyens de réaliser ses projets plus ambitieux. 
-                                Peu après, il lance X.com, une société de paiement en ligne qui deviendra PayPal après une fusion. 
-                                PayPal connaît un immense succès et est racheté par eBay en 2002 pour 1,5 milliard de dollars. 
-                                Ce succès initial permet à Musk de se consacrer à ses projets futuristes.
-                            </p>
+                <iframe width="300" height="315" src="https://www.youtube.com/embed/pIozWFa6Mdc?si=i8yM0aPxO3UGtH4f" 
+                title="Video Arte de Elon" frameborder="0" allowfullscreen></iframe>
 
-                            <p class = "texte3">En 2002, Musk fonde SpaceX dans le but de réduire les coûts des voyages 
-                                spatiaux et de rendre les missions spatiales accessibles à un plus large public. 
-                                L’objectif ultime de SpaceX est la colonisation de Mars. En 2008,
-                                la société réussit son premier lancement orbital avec la Falcon 1,
-                                devenant ainsi la première entreprise privée à envoyer un satellite en orbite. Depuis, SpaceX a multiplié les succès,
-                                notamment avec la réutilisation de ses fusées et le lancement du vaisseau Crew Dragon, qui transporte des astronautes vers la Station spatiale internationale.
-                            </p>
-                        </section> 
-                    </div> 
-                </article>
-            <section class="separation"><p>EMPTY</p></section>
-            <h2 id ="evenement"></h2>
-                <article>
-                        <div class ="alignerpancarte2">
-                            <div class ="pancarte">
-                                <img src="image/image.png">
-                                <p>
-                                    SpaceX continue de déployer sa constellation de satellites Starlink pour fournir une connexion internet haut débit dans le monde entier. 
-                                    Des événements en lien avec le lancement de nouveaux satellites ou 
-                                    l'expansion du réseau pourraient inclure des apparitions de Musk.
-                                </p>
-                            </div>                      
-                            <div class ="pancarte">
-                                <img src="image/Spacex_enhanced.jpg">
-                                <p>
-                                    SpaceX poursuit ses missions ambitieuses, 
-                                    y compris les lancements de satellites via les fusées Falcon 9 et Falcon Heavy, 
-                                    et les développements de Starship, le futur vaisseau spatial destiné à des missions lunaires et martiennes. 
-                                    Musk est souvent présent lors de ces lancements majeurs, 
-                                    où il donne des mises à jour sur l'avancement des projets et les ambitions de l'entreprise en matière de 
-                                    conquête spatial    
-                                </p>
-                            </div>
-                            <div class = "pancarte">
-                                <img src="image/tesla.jpg">
-                                <p>
-                                    Tesla AI Day
-                                    Tesla pourrait organiser un événement en 2024, 
-                                    comme son Tesla AI Day, où Elon Musk présenterait de nouvelles avancées en matière d'intelligence artificielle
-                                    pour l'Autopilot, la conduite autonome, et d'autres technologies liées aux véhicules électriques.
-                                    Bien que la date exacte de ce type d'événement ne soit pas toujours fixée à l'avance, 
-                                    c'est un rendez-vous récurrent pour les passionnés de Tesla.
-                                </p>
-                            </div>
-                            <div class = "pancarte">
-                                <img src ="image/The-Boring-Company-Branding-logotype-we-need-cafeine-02_enhanced.jpg">
-                                <p>
-                                    The Boring Company Tunnel Openings:
-                                    Ces événements marquent l'achèvement de projets de tunnel, comme ceux du Loop ou du Las Vegas Loop. 
-                                    Musk y est souvent présent pour les inaugurations ou les présentations.                         
-                                </p>
-                            </div>
-                        </div>
-                </article>
-            <section class="separation"><p>Empty</p></section>
-            <h2 id = "realisation"></h2>
-        </main>
-        <footer>
-            <p>Reseau</p>
-        </footer>
-    </body>
+                <iframe width="300" height="315" src="https://www.youtube.com/embed/pr9RPWwG4dk?si=vX4Gh9OHOIAEewOK" 
+                title="Video France24 sur Elon Musk" frameborder="0" allowfullscreen></iframe>
+                
+                <iframe width="280" height="315" src="https://www.youtube.com/embed/IhA0H4SEsGI?si=_qnaLmr7MNmJb3Pt" 
+                title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <ul>
+            <div class="logofooter">
+                <a href="https://x.com/elonmusk?"><img src="image/X_logo_processed.jpg" alt="Logo X"></a>
+            </div>
+            <li><a href="#">Mention légale</a></li>
+            <li><a href="#">Politique de confidentialité</a></li>
+            <li><a href="#">Conditions Générales</a></li>
+        </ul>
+    </footer>
+</body>
 </html>
-
