fichiers html css fansite 3 et contact

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="fansite1.html">Elon Musk</a></li>
                 <li><a href="fansite3.html">Banksky</a></li>
                 <li><a href="fansite2.html">Brennan Lee Mulligan</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact_fansite.html">Contact</a></li>
             </ul>
             <p class="desktop-nav">Bienvenue</p>
         </nav>
