fichiers html css fansite2

--- a/fansite1.html
+++ b/fansite1.html
@@ -22,7 +22,7 @@
                 <li><a href="#sns">RS</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li class="pages">
-                    <a href="fansite1.html"><img src="fansite2/images/elon-musk.png"></a>
+                    <a href="elonfan.html"><img src="fansite2/images/elon-musk.png"></a>
                     <a href="index.html"><img src="fansite2/images/sns icons/icons8-home-24.png"></a>
                     <a href="fansite3.html"><img src="fansite2/images/image32.webp"></a>
                 </li>
@@ -83,7 +83,7 @@
         </article>
     </aside>
     <footer>
-        <p class="contact">Contact</p>
+        <p class="contact_fansite">Contact</p>
         <p class="fansite">fansite1 fansite3</p>
     </footer>
 </body>
