--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             </label>
             <input type="checkbox"id="check" class="hidden">
             <ul>
-                <li><a href="fansite1.html">Elon Musk</a></li>
+                <li><a href="elonfan.html">Elon Musk</a></li>
                 <li><a href="fansite3.html">Banksky</a></li>
-                <li><a href="fansite2.html">Brennan Lee Mulligan</a></li>
+                <li><a href="fansite1.html">Brennan Lee Mulligan</a></li>
                 <li><a href="contact_fansite.html">Contact</a></li>
             </ul>
             <p class="desktop-nav">Bienvenue</p>
@@ -38,7 +38,7 @@
         </article>
     </main>
     <footer>
-        <a href="contact.html">Contact</a>
+        <a href="contact_fansite.html">Contact</a>
     </footer>
 </body>
 </html>
