--- a/contact_fansite.html
+++ b/contact_fansite.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     
-    <link rel="stylesheet" href="contact_style.css">
+    <link rel="stylesheet" href="css/contact_style.css">
 </head>
 <body>
     <header>
