mise a jour liens sites

--- a/contact_fansite.html
+++ b/contact_fansite.html
@@ -35,9 +35,9 @@
                 <input type="text" id="email" name= "email" placeholder="Ex. : Pierre.D@hotmail.com" >
                 <label for="selection_site">Sélectionnez un site :</label>
                 <select name="selection_site">
-                    <option value="Brenan">Fansite de Brenan Lee Mulligan</option>
-                    <option value="Elon">Elon Fan</option>
-                    <option value="Bansky">BANSKY</option>
+                    <option value="Brenan"> Fansite Brenan Lee Mulligan</option>
+                    <option value="Elon"> Fansite Elon Musk</option>
+                    <option value="Bansky">Fansite BANSKY</option>
                   
                 </select>
             </div>
