--- a/elonfan.html
+++ b/elonfan.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Voici le site des Fan d'Elon Musk Français">
     <title>Elon Musk Fan Page</title>
     <link rel="stylesheet" href="css/elonmsukfanpage.css">
-    <link rel="icon" href="image/elon.icon.png" type="image/png" alt="Icon de la page">
+    <link rel="icon" href="images/fansite2/elon.icon.png" type="image/png" alt="Icon de la page">
 </head>
 <body>
     <!-- Barre de navigation -->
@@ -62,19 +62,19 @@
             <h2>Événements</h2>
             <div class="alignerpancarte2">
                 <div class="pancarte">
-                    <img src="image/image.png" alt="Image d'Elon avec un fond Starlink">
+                    <img src="images/fansite2/image.png" alt="Image d'Elon avec un fond Starlink">
                     <p>SpaceX continue de déployer sa constellation de satellites Starlink pour fournir une connexion internet haut débit dans le monde entier.</p>
                 </div>
                 <div class="pancarte">
-                    <img src="image/Spacex_enhanced.jpg" alt="Fond d'écran de SpaceX">
+                    <img src="images/fansite2/Spacex_enhanced.jpg" alt="Fond d'écran de SpaceX">
                     <p>SpaceX poursuit ses missions ambitieuses, y compris les lancements de satellites via les fusées Falcon 9 et Falcon Heavy.</p>
                 </div>
                 <div class="pancarte">
-                    <img src="image/tesla.jpg" alt="Logo de Tesla">
+                    <img src="images/fansite2/tesla.jpg" alt="Logo de Tesla">
                     <p>Tesla pourrait organiser un événement en 2024, comme son Tesla AI Day, où Elon Musk présenterait de nouvelles avancées en matière d'intelligence artificielle.</p>
                 </div>
                 <div class="pancarte">
-                    <img src="image/The-Boring-Company-Branding-logotype-we-need-cafeine-02_enhanced.jpg" alt="Logo de The Boring Company">
+                    <img src="images/fansite2/The-Boring-Company-Branding-logotype-we-need-cafeine-02_enhanced.jpg" alt="Logo de The Boring Company">
                     <p>The Boring Company Tunnel Openings: Ces événements marquent l'achèvement de projets de tunnel comme le Las Vegas Loop.</p>
                 </div>
             </div>
@@ -119,7 +119,7 @@
     <footer>
         <ul>
             <div class="logofooter">
-                <a href="https://x.com/elonmusk?"><img src="image/X_logo_processed.jpg" alt="Logo X"></a>
+                <a href="https://x.com/elonmusk?"><img src="images/fansite2/X_logo_processed.jpg" alt="Logo X"></a>
             </div>
             <li><a href="#">Mention légale</a></li>
             <li><a href="#">Politique de confidentialité</a></li>
