--- a/fansite1.html
+++ b/fansite1.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial scale=1.0">
     <title>Brennan Lee Mulligan</title> 
     <link rel="stylesheet" media="screen" href="css/fansite1.css">
-    <link rel="icon" href="fansite2/images/sns icons/icons8-rolling-dice-16.png" />
+    <link rel="icon" href="images/fansite1/sns icons/icons8-rolling-dice-16.png" />
 </head>
 <body>
     <header>
         <nav>
             <label for="check" class="checkbtn">
-                <img src="fansite2\images\Brennan-Lee-Mulligan-icon.jpg">
+                <img src="images\fansite1\Brennan-Lee-Mulligan-icon.jpg">
             </label>
             <input type="checkbox"id="check" class="hidden"> <!--checkbox to toggle menu-->
             <ul>
@@ -22,9 +22,9 @@
                 <li><a href="#sns">RS</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li class="pages">
-                    <a href="elonfan.html"><img src="fansite2/images/elon-musk.png"></a>
-                    <a href="index.html"><img src="fansite2/images/sns icons/icons8-home-24.png"></a>
-                    <a href="fansite3.html"><img src="fansite2/images/image32.webp"></a>
+                    <a href="elonfan.html"><img src="images/fansite2/pixelcut-export.png"></a>
+                    <a href="index.html"><img src="images/fansite1/sns icons/icons8-home-24.png"></a>
+                    <a href="fansite3_1.html"><img src="images/fansite3/image32.webp"></a>
                 </li>
             </ul>
         </nav>
@@ -32,7 +32,7 @@
     <main>
         <h1>Brenan Lee Mulligan</h1>
         <article class="acceuil-img">
-            <img src="fansite2/images/brennan-1.jpg">
+            <img src="images/fansite1/brennan-1.jpg">
         </article>
         <article class="acceuil">
             <p>Brennan Lee Mulligan est une célébrité internet américaine. </br>
@@ -44,15 +44,15 @@
         <h2 class="best-of-title">Les meilleures saisons de Dimension 20</h2>
         <article class="best-of">
             <section>
-                <img src="fansite2/images/SquareFH.webp">
+                <img src="images/fansite1/SquareFH.webp">
                 <p>Fantasy High</p>
             </section>
             <section>
-                <img src="fansite2/images/SquareCOC.webp">
+                <img src="images/fansite1/SquareCOC.webp">
                 <p> A Crown of Candy</p>
             </section>
             <section>
-                <img src="fansite2/images/SquareRW.webp">
+                <img src="images/fansite1/SquareRW.webp">
                 <p>The Ravening War</p>
             </section>
             <section class="space"></section>
@@ -62,29 +62,32 @@
         <article id="sns">
             <section>
                 <a href="https://brennanleemulligan.com/">
-                    <img src="fansite2/images/sns icons/d1db4ed8-2c99-454e-a3b4-1722c024d618-63a33b5e.avif" alt="Site Web">
+                    <img src="images/fansite1/sns icons/d1db4ed8-2c99-454e-a3b4-1722c024d618-63a33b5e.avif" alt="Site Web">
                 </a>
             </section>
             <section>
                 <a href="https://twitter.com/brennanlm">
-                    <img src="fansite2/images/sns icons/twitter.png" alt="Twitter">
+                    <img src="images/fansite1/sns icons/twitter.png" alt="Twitter">
                 </a>
             </section>
             <section>
                 <a href="https://www.instagram.com/brennanleemulligan/">
-                    <img src="fansite2/images/sns icons/social.png" alt="Instagram">
+                    <img src="images/fansite1/sns icons/social.png" alt="Instagram">
                 </a>
             </section>
             <section>
                 <a href="https://www.youtube.com/channel/UCC8zWIx8aBQme-x1nX9iZ0A/featured">
-                <img src="fansite2/images/sns icons/youtube.png" alt="YouTube">
+                <img src="images/fansite1/sns icons/youtube.png" alt="YouTube">
                 </a>
             </section>
         </article>
     </aside>
     <footer>
-        <p class="contact_fansite">Contact</p>
-        <p class="fansite">fansite1 fansite3</p>
+        <p class="contact"><a href="contact_fansite.html">Contact</a></p>
+        <p class="fansite">
+            <a href="elonfan.html"><img src="images/fansite2/pixelcut-export.png"></a>
+            <a href="fansite3_1.html"><img src="images/fansite3/image34.webp"></a>
+        </p>
     </footer>
 </body>
 </html>
