--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>Acceuil</title> 
     <link rel="stylesheet" media="screen" href="css/index.css">
-    <link rel="icon" href="fansite2/images/sns icons/icons8-home-24.png" />
+    <link rel="icon" href="images/fansite1/sns icons/icons8-home-24.png" />
 </head>
 <body>
     <header>
@@ -25,15 +25,15 @@
     </header>
     <main>
         <article class="fansite">
-            <a href="fansiteurl.html"><img src="fansite2/images/elon-musk.png"></a>
+            <a href="elonfan.html"><img src="images/fansite2/pixelcut-export.png"></a>
             <p>Elon Musk</p>
         </article>
         <article class="fansite">
-            <a hred="url.html"><img src="fansite2/images/image32.webp"></a>
+            <a href="fansite3_1.html"><img src="images/fansite3/image32.webp"></a>
             <p>Banksky</p>
         </article>
         <article class="fansite">
-            <a href="fansite2.html"><img src="fansite2/images/brennan-1.jpg"></a>
+            <a href="fansite1.html"><img src="images/fansite1/brennan-1.jpg"></a>
             <p>Brennan Lee Mulligan </p>
         </article>
     </main>
