--- a/fansite1/evenements.html
+++ b/fansite1/evenements.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial scale=1.0">
     <title>Brennan Lee Mulligan</title> 
     <link rel="stylesheet" media="screen" href="../css/fansite1.css">
-    <link rel="icon" href="images/sns icons/icons8-rolling-dice-16.png" />
+    <link rel="icon" href="../images/fansite1/sns icons/icons8-rolling-dice-16.png" />
 </head>
 <body>
     <header>
         <nav>
             <label for="check" class="checkbtn">
-                <img src="images\Brennan-Lee-Mulligan-icon.jpg">
+                <img src="..\images\fansite1\Brennan-Lee-Mulligan-icon.jpg">
             </label>
             <input type="checkbox"id="check" class="hidden"> <!--checkbox to toggle menu-->
             <ul>
@@ -20,11 +20,11 @@
                 <li><a href="evenements.html">Evenements</a></li>
                 <li><a href="gallerie.html">Gallerie</a></li>
                 <li><a href="#sns">RS</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="../contact.html">Contact</a></li>
                 <li class="pages">
-                    <a href="fansite1.html"><img src="images/elon-musk.png"></a>
-                    <a href="../index.html"><img src="images/sns icons/icons8-home-24.png"></a>
-                    <a href="fansite3.html"><img src="images/image32.webp"></a>
+                    <a href="../fansite1.html"><img src="../images/fansite2/pixelcut-export.png"></a>
+                    <a href="../index.html"><img src="../images/fansite1/sns icons/icons8-home-24.png"></a>
+                    <a href="../fansite3.html"><img src="../images/fansite3/image32.webp"></a>
                 </li>
             </ul>
         </nav>
@@ -34,7 +34,7 @@
         <div id="boite-evenement" class="boite">
         <article class="evenements">
             <section class="event-img">
-                <img src="images/GauntletTickets.webp">
+                <img src="../images/fansite1/GauntletTickets.webp">
             </section>
             <section>
                 <p>Events title at place on date</p>
@@ -42,7 +42,7 @@
         </article>
         <article class="evenements">
             <section class="event-img">
-                <img src="url.jpg">
+                <img src="../images/fansite1/BIGGER-TW-Tall.webp">
             </section>
             <section>
                 <p>Events title at place on date</p>
@@ -50,7 +50,7 @@
         </article>
         <article class="evenements">
             <section class="event-img">
-                <img src="url.jpg">
+                <img src="../images/fansite1/dimension_20___uk___ireland_tour_v2a_edited_jpg-scaled.webp">
             </section>
             <section>
                 <p>Events title at place on date</p>
@@ -58,7 +58,7 @@
         </article>
         <article class="evenements">
             <section class="event-img">
-                <img src="url.jpg">
+                <img src="../images/fansite1/Project-4-Awesome.webp">
             </section>
             <section>
                 <p>Events title at place on date</p>
@@ -70,29 +70,32 @@
         <article id="sns">
             <section>
                 <a href="https://brennanleemulligan.com/">
-                    <img src="images\sns icons\d1db4ed8-2c99-454e-a3b4-1722c024d618-63a33b5e.avif" alt="Site Web">
+                    <img src="..\images\fansite1\sns icons\d1db4ed8-2c99-454e-a3b4-1722c024d618-63a33b5e.avif" alt="Site Web">
                 </a>
             </section>
             <section>
                 <a href="https://twitter.com/brennanlm">
-                    <img src="images/sns icons/twitter.png" alt="Twitter">
+                    <img src="../images/fansite1/sns icons/twitter.png" alt="Twitter">
                 </a>
             </section>
             <section>
                 <a href="https://www.instagram.com/brennanleemulligan/">
-                    <img src="images/sns icons/social.png" alt="Instagram">
+                    <img src="../images/fansite1/sns icons/social.png" alt="Instagram">
                 </a>
             </section>
             <section>
                 <a href="https://www.youtube.com/channel/UCC8zWIx8aBQme-x1nX9iZ0A/featured">
-                <img src="images/sns icons/youtube.png" alt="YouTube">
+                <img src="../images/fansite1/sns icons/youtube.png" alt="YouTube">
                 </a>
             </section>
         </article>
     </aside>
     <footer>
-        <p class="contact">Contact</p>
-        <p class="fansite">fansite1 fansite3</p>
+        <p class="contact"><a href="contact_fansite.html">Contact</a></p>
+        <p class="fansite">
+            <a href="../elonfan.html"><img src="../images/fansite2/pixelcut-export.png"></a>
+            <a href="../fansite3_1.html"><img src="../images/fansite3/image34.webp"></a>
+        </p>
     </footer>
 </body>
 </html>
