--- a/fansite3/fansite3_3.html
+++ b/fansite3/fansite3_3.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BANSKY - Site des fans français.</title>
-        <link rel="stylesheet" href="fansite3.css">
+        <link rel="stylesheet" href="../css/fansite3.css">
         <header>
 
         <!-- site's fonts -->
