page avec contact

--- a/Code/elonfan.html
+++ b/Code/elonfan.html
@@ -124,6 +124,8 @@
             <li><a href="#">Mention légale</a></li>
             <li><a href="#">Politique de confidentialité</a></li>
             <li><a href="#">Conditions Générales</a></li>
+            <a href="index.html"><img src="images/fansite1/sns icons/icons8-home-24.png"></a>
+            <a href="C:/Users/lysot/OneDrive/Desktop/HTML/Fansite/contact_fansite.html" alt="page de contact">Contact</a>
         </ul>
     </footer>
 </body>
