--- a/fansite1/evenements.html
+++ b/fansite1/evenements.html
@@ -20,7 +20,7 @@
                 <li><a href="evenements.html">Evenements</a></li>
                 <li><a href="gallerie.html">Gallerie</a></li>
                 <li><a href="#sns">RS</a></li>
-                <li><a href="../contact.html">Contact</a></li>
+                <li><a href="../contact_fansite.html">Contact</a></li>
                 <li class="pages">
                     <a href="../fansite1.html"><img src="../images/fansite2/pixelcut-export.png"></a>
                     <a href="../index.html"><img src="../images/fansite1/sns icons/icons8-home-24.png"></a>
@@ -37,7 +37,7 @@
                 <img src="../images/fansite1/GauntletTickets.webp">
             </section>
             <section>
-                <p>Events title at place on date</p>
+                <p>24 Janvier 2025: Madison Square Garden</p>
             </section>
         </article>
         <article class="evenements">
@@ -45,7 +45,8 @@
                 <img src="../images/fansite1/BIGGER-TW-Tall.webp">
             </section>
             <section>
-                <p>Events title at place on date</p>
+                <p>16 Avril: Orlan Mor, Glasgow</p>
+                <p>19 Avril: Hackney Empire, Londre</p>
             </section>
         </article>
         <article class="evenements">
@@ -53,7 +54,7 @@
                 <img src="../images/fansite1/dimension_20___uk___ireland_tour_v2a_edited_jpg-scaled.webp">
             </section>
             <section>
-                <p>Events title at place on date</p>
+                <p>Dimension 20 au Royaume-Unis et en Irelande! </p>
             </section>
         </article>
         <article class="evenements">
@@ -61,7 +62,7 @@
                 <img src="../images/fansite1/Project-4-Awesome.webp">
             </section>
             <section>
-                <p>Events title at place on date</p>
+                <p>20 Février 2023: Récolte de fonds pour le projet Awesome</p>
             </section>
         </article>
         </div>
