link fix et img link

--- a/fansite1.html
+++ b/fansite1.html
@@ -20,7 +20,7 @@
                 <li><a href="fansite1/evenements.html">Evenements</a></li>
                 <li><a href="fansite1/gallerie.html">Gallerie</a></li>
                 <li><a href="#sns">RS</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact_fansite.html">Contact</a></li>
                 <li class="pages">
                     <a href="elonfan.html"><img src="images/fansite2/pixelcut-export.png"></a>
                     <a href="index.html"><img src="images/fansite1/sns icons/icons8-home-24.png"></a>
