--- a/fansite1/gallerie.html
+++ b/fansite1/gallerie.html
@@ -20,11 +20,11 @@
                 <li><a href="evenements.html">Evenements</a></li>
                 <li><a href="gallerie.html">Gallerie</a></li>
                 <li><a href="#sns">RS</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="../contact_fansite.html">Contact</a></li>
                 <li class="pages">
-                    <a href="fansite1.html"><img src="images/elon-musk.png"></a>
-                    <a href="../index.html"><img src="images/sns icons/icons8-home-24.png"></a>
-                    <a href="fansite3.html"><img src="images/image32.webp"></a>
+                    <a href="../fansite1.html"><img src="../images/fansite2/pixelcut-export.png"></a>
+                    <a href="../index.html"><img src="../images/fansite1/sns icons/icons8-home-24.png"></a>
+                    <a href="../fansite3_1.html"><img src="../images/fansite3/image32.webp"></a>
                 </li>
             </ul>
         </nav>
@@ -96,7 +96,7 @@
         </article>
     </aside>
     <footer>
-        <p class="contact"><a href="contact_fansite.html">Contact</a></p>
+        <p class="contact"><a href="../contact_fansite.html">Contact</a></p>
         <p class="fansite">
             <a href="../elonfan.html"><img src="../images/fansite2/pixelcut-export.png"></a>
             <a href="../fansite3_1.html"><img src="../images/fansite3/image34.webp"></a>
