--- a/fansite1/evenements.html
+++ b/fansite1/evenements.html
@@ -92,7 +92,7 @@
         </article>
     </aside>
     <footer>
-        <p class="contact"><a href="contact_fansite.html">Contact</a></p>
+        <p class="contact"><a href="../contact_fansite.html">Contact</a></p>
         <p class="fansite">
             <a href="../elonfan.html"><img src="../images/fansite2/pixelcut-export.png"></a>
             <a href="../fansite3_1.html"><img src="../images/fansite3/image34.webp"></a>
