--- a/elonfan.html
+++ b/elonfan.html
@@ -124,6 +124,8 @@
             <li><a href="#">Mention légale</a></li>
             <li><a href="#">Politique de confidentialité</a></li>
             <li><a href="#">Conditions Générales</a></li>
+            <li><a href="index.html">Index</a></li>
+            <li><a href="contact_fansite.html" alt="page de contact">Contact</a></li>
         </ul>
     </footer>
 </body>
