--- a/fansite1/gallerie.html
+++ b/fansite1/gallerie.html
@@ -22,7 +22,7 @@
                 <li><a href="#sns">RS</a></li>
                 <li><a href="../contact_fansite.html">Contact</a></li>
                 <li class="pages">
-                    <a href="../fansite1.html"><img src="../images/fansite2/pixelcut-export.png"></a>
+                    <a href="../elonfan.html"><img src="../images/fansite2/pixelcut-export.png"></a>
                     <a href="../index.html"><img src="../images/fansite1/sns icons/icons8-home-24.png"></a>
                     <a href="../fansite3_1.html"><img src="../images/fansite3/image32.webp"></a>
                 </li>
