index version mobile fix img link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <label for="check" class="checkbtn">
-                <img src="fansite2\images\sns icons\icons8-menu-64.png">
+                <img src="images\fansite1\sns icons\icons8-menu-64.png">
             </label>
             <input type="checkbox"id="check" class="hidden">
             <ul>
