--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input type="checkbox"id="check" class="hidden">
             <ul>
                 <li><a href="elonfan.html">Elon Musk</a></li>
-                <li><a href="fansite3.html">Banksky</a></li>
+                <li><a href="fansite3_1.html">Banksky</a></li>
                 <li><a href="fansite1.html">Brennan Lee Mulligan</a></li>
                 <li><a href="contact_fansite.html">Contact</a></li>
             </ul>
