--- a/contact_fansite.html
+++ b/contact_fansite.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <h1>FanSiteS</h1>
+    <h1>Fansites</h1>
     </header>
     <main>
         <h2>Prenons contact:</h2>
@@ -45,7 +45,7 @@
         <div class="part_3">
             <p>
             <label for="demande_contact">Votre message:</label><br>
-            <textarea name="demande_contact"  rows="10" cols="100"></textarea>
+            <textarea name="demande_contact"  rows="10" cols="42"></textarea>
             </p>
             <p>
               <input type="checkbox" name="cdc" id="cdc"> <label for="cdc">Veuillez accepter notre politique de confidentialité, en cochant cette case.</label>
@@ -57,7 +57,9 @@
     </main>
     
     <footer>
-       <p> FOOTER FOOTER FOOTER </p>
+        <div class="footer_style">
+        <a href="index.html">Portail Fansites  >>></a>
+        </div>
     </footer>
 
 </body>
